--- a/emoji_switch/style.css
+++ b/emoji_switch/style.css
@@ -10,7 +10,18 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #FBE7C6;
+    animation: mymove 5s infinite;
  }
+
+
+ @keyframes mymove {
+    from {background-color: #A0E7E5;}
+    to {background-color: #FFAEBC;}
+    from{background-color: #FBE7C6;}
+    from{background-color: #E4DFAF;}
+ }
+
 
 .emoji {
     font-size: 5rem;
@@ -20,14 +31,19 @@
 
 .close {
     display: none;
+    width: 300px;
+    height: 300px;
 }
 
 .open {
     display: none;
+    width: 500px;
+    height: 500px;
 }
 
 .active {
     display: block;
 }
- 
+
+
 
